kubernetes/portus/portus-background.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus-background
  labels:
    app: portus-background
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portus-background
  template:
    metadata:
      labels:
        app: portus-background
    spec:
      containers:
        - name: portus-background
          image: opensuse/portus:head
          volumeMounts:
            - mountPath: /certificates
              name: portus-certs
      volumes:
        - name: portus-certs
          persistentVolumeClaim:
            claimName: portus-certs
