kubernetes/portus/portus-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus-db
  labels:
    app: portus-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portus-db
  template:
    metadata:
      labels:
        app: portus-db
    spec:
      containers:
        - name: portus-db
          image: library/mariadb:10.0.23
          # command: ["mysqld"]
          # args:  ["--character-set-server=utf8", "--collation-server=utf8_unicode_ci", "--init-connect='SET NAMES UTF8;'", "--innodb-flush-log-at-trx-commit=0"]
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: portus-db
      volumes:
      - name: portus-db
        persistentVolumeClaim:
          claimName: portus-db
