kubernetes/portus/portus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portus
  labels:
    app: portus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portus
  template:
    metadata:
      labels:
        app: portus
    spec:
      containers:
        - name: portus
          image: opensuse/portus:head
          volumeMounts:
            - mountPath: /certificates
              name: portus-certs
      volumes:
      - name: portus-db
        persistentVolumeClaim:
          claimName: portus-db
      - name: portus-certs
        persistentVolumeClaim:
          claimName: portus-certs
