kubernetes/portus/registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:2
          volumeMounts:
            - mountPath: /secrets/
              name: portus-certs
            - mountPath: /var/lib/registry
              name: registry-repository
      volumes:
      - name: portus-certs
        persistentVolumeClaim:
          claimName: portus-certs
      - name: registry-repository
        persistentVolumeClaim:
          claimName: registry-repository
